--- a/MoveFiles/Dockerfile
+++ b/MoveFiles/Dockerfile
@@ -8,7 +8,7 @@ RUN apt-get update && apt-get install -y inotify-tools supervisor
 WORKDIR /app
 
 # Copy the current directory contents into the container at /app
-COPY . /app
+COPY ./MoveFiles /app
 
 # Install any needed packages specified in requirements.txt
 # RUN pip install --no-cache-dir -r requirements.txt
