--- a/MoveFiles/Dockerfile
+++ b/MoveFiles/Dockerfile
@@ -8,13 +8,13 @@ RUN apt-get update && apt-get install -y inotify-tools supervisor
 WORKDIR /app
 
 # Copy the current directory contents into the container at /app
-COPY ./MoveFiles /app
+COPY /MoveFiles/. /app
 
 # Install any needed packages specified in requirements.txt
 # RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy the supervisor configuration file
-COPY ./MoveFiles/supervisord.conf /etc/supervisor/conf.d/supervisord.conf
+COPY /MoveFiles/supervisord.conf /etc/supervisor/conf.d/supervisord.conf
 
 # Run supervisor when the container launches
 CMD ["/usr/bin/supervisord"]
