test with watchdog

--- a/MoveFiles/supervisord.conf
+++ b/MoveFiles/supervisord.conf
@@ -2,7 +2,7 @@
 nodaemon=true
 
 [program:monitor_inbox]
-command=/bin/bash /app/monitor_inbox.sh
+command=python /app/monitor_inbox.py
 stdout_logfile=/var/log/monitor_inbox.log
 stderr_logfile=/var/log/monitor_inbox_err.log
 autostart=true
