--- a/MoveFiles/Dockerfile
+++ b/MoveFiles/Dockerfile
@@ -1,8 +1,8 @@
 # Use an official Python runtime as a parent image
 FROM python:3.9-slim
 
-# Install inotify-tools and supervisor
-RUN apt-get update && apt-get install -y inotify-tools supervisor
+# Install necessary system packages
+RUN apt-get update && apt-get install -y supervisor
 
 # Set the working directory in the container
 WORKDIR /app
@@ -10,8 +10,8 @@ WORKDIR /app
 # Copy the current directory contents into the container at /app
 COPY /MoveFiles/. /app
 
-# Install any needed packages specified in requirements.txt
-# RUN pip install --no-cache-dir -r requirements.txt
+# Install Python dependencies
+RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy the supervisor configuration file
 COPY /MoveFiles/supervisord.conf /etc/supervisor/conf.d/supervisord.conf
